# letter-recognition

./: .gitignore  CHANGELOG.md  README.md  app.py  index.html  noxfile.py  prepare_data.ipynb  pyproject.toml  requirements.txt  train.ipynb
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: feat-model-api_letterrecognitionapi.yml  main_letterrecognitionapi.yml
data/processed/: data.npz
data/raw/: data.npz
letter_recognition/: __init__.py  __main__.py  app.py  nn.py  tmp.py
letter_recognition/data/dataset/: data.npz
letter_recognition/data/models/: lenet5.npz
letter_recognition/data/models/lenet5/: conv1bias.npy  conv1weight.npy  conv2bias.npy  conv2weight.npy  linear1bias.npy  linear1weight.npy  linear2bias.npy  linear2weight.npy  linear3bias.npy  linear3weight.npy
letter_recognition/nn/: __main__.py  activation.py  ffunctions.py  layers.py  loss.py
models/lenet5/: conv1bias.npy  conv1weight.npy  conv2bias.npy  conv2weight.npy  linear1bias.npy  linear1weight.npy  linear2bias.npy  linear2weight.npy  linear3bias.npy  linear3weight.npy
notebooks/: 1-mp-data-preparation.ipynb  1-mp-raw-data-acquisition.ipynb  2-mp-data-preparation.ipynb  2-mp-model-training.ipynb  3-mp-model-training.ipynb
src/letter_recognition/: __init__.py  __main__.py  helpers.py
src/letter_recognition/data/dataset/: processed.npz
src/letter_recognition/data/models/lenet5/: conv1bias.npy  (+4 more)
src/letter_recognition/nn/: activation.py  ffunctions.py  layers.py  loss.py
tests/: __init__.py  test_api.py  test_letter_recognition.py  test_main.py  test_nn.py  test_nn_layers.py
website/: index.html  main.html  script.js  style.css
website/scripts/: main.js
website/styles/: style.css
www/scripts/: main.js
www/styles/: style.css
