[tool.poetry]
name = "letter-recognition-thesis"
version = "0.1.0"
description = ""
authors = ["Michał Pindel <m.pindel7991@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
numpy = "^1.19.5"
scipy = "^1.6.0"
numba = "^0.53.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
torch = "^1.7.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
