[tool.poetry]
name = "letter-recognition"
version = "0.2.0"
description = ""
authors = ["Michał Pindel <m.pindel7991@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.19.5"
scipy = "^1.6.0"
numba = "^0.53.0"
Flask = "^1.1.2"
Pillow = "^8.2.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
torch = "^1.7.1"
black = "^20.8b1"
jupyter = "^1.0.0"
ipykernel = "^5.5.3"
jupyter-client = "^6.2.0"
livelossplot = "^0.5.4"
tqdm = "^4.60.0"
torchvision = "^0.9.1"
matplotlib = "^3.4.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
