[tool.poetry]
name = "letter-recognition"
version = "1.0.0"
description = ""
authors = ["Michał Pindel <m.pindel7991@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.4"
numba = "^0.55.2"
scipy = "^1.8.1"
Pillow = "^9.2.0"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
click = "^8.1.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
letter-recognition = "letter_recognition.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
